...
            "state": "translated",
            "value": "Adicione uma nota (opcional)"
          }
        }
      }
    },
    "Add today's score": {
      "extractionState": "manual",
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Heutige Wertung hinzufügen"
...
            "state": "translated",
            "value": "SEQUÊNCIA ATUAL"
          }
        }
      }
    },
    "Daily Reminder": {
      "extractionState": "manual",
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Tägliche Erinnerung"
...
            "state": "translated",
            "value": "Excluir"
          }
        }
      }
    },
    "delete.left": {
      "extractionState": "manual",
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "delete.left"
...
            "state": "translated",
            "value": "delete.left"
          }
        }
      }
    },
    "Done": {
      "extractionState": "manual",
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Fertig"
...
            "state": "translated",
            "value": "VARIAÇÃO DO HUMOR"
          }
        }
      }
    },
    "Feed": {
      "extractionState": "manual",
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Feed"
...
            "state": "translated",
            "value": "MVP"
          }
        }
      }
    },
    "My Page": {
      "localizations": {
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "マイページ"
          }
...
            "state": "translated",
            "value": "Veja como o mundo está se sentindo hoje."
          }
        }
      }
    },
    "Settings": {
      "extractionState": "manual",
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Einstellungen"
...
            "state": "translated",
            "value": "Qual é o seu Scoor?"
          }
        }
      }
    },
    "World": {
      "extractionState": "manual",
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Welt"
...
            "state": "translated",
            "value": "Tentar de novo"
          }
        }
      }
    },
    "닫기": {
      "extractionState": "manual",
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Schließen"
...
            "state": "translated",
            "value": "Adicionar comentário…"
          }
        }
      }
    },
    "더 보기": {
      "extractionState": "manual",
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Mehr anzeigen"
...
            "state": "translated",
            "value": "Cripto"
          }
        }
      }
    },
    "탐색": {
      "extractionState": "manual",
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Entdecken"
...
            "value": "Por mês"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Monthly"
          }
        }
      }
    },
    "약관 전문 · 동의 관리": {
      "extractionState": "manual",
...
            "state": "translated",
            "value": "Os fins de semana têm média cerca de 10 pontos maior"
          }
        }
      }
    },
    "Home": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Home"
...
